samples/_failures_safe/1761423836_b996e5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_235af2a1.c: In function ‘parse_primary’:
./samples/SAFE/__tmp_235af2a1.c:170:9: error: expected expression at end of input
  170 |         node->line =
      |         ^~~~
./samples/SAFE/__tmp_235af2a1.c:170:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_235af2a1.c:170:9: error: expected declaration or statement at end of input
